--- a/index.html
+++ b/index.html
@@ -212,39 +212,41 @@
                 <h3 className="font-bold mb-2">How to move up to the next grade band:</h3>
                 <ul className="list-disc pl-5 space-y-2">
                   {activeGrade === 'third' && (
-                    <>
+                    <div>
                       <li>Expand your research beyond the obvious sources</li>
                       <li>Begin to analyze your work rather than just describing it</li>
                       <li>Show more attention to presentation details</li>
                       <li>Try to experiment with new ideas rather than staying in comfort zone</li>
-                    </>
+                    </div>
                   )}
                   {activeGrade === 'lower-second' && (
-                    <>
+                    <div>
                       <li>Deepen your research and make more meaningful connections</li>
                       <li>Develop stronger analytical skills in your design development</li>
                       <li>Improve the professionalism of your presentation</li>
                       <li>Take more creative risks and explore new territory</li>
-                    </>
+                    </div>
                   )}
                   {activeGrade === 'upper-second' && (
-                    <>
+                    <div>
                       <li>Extend your research beyond the expected sources</li>
                       <li>Demonstrate more sophisticated analysis and critical thinking</li>
                       <li>Refine technical and presentation skills to a higher level</li>
                       <li>Show more innovation and well-considered experimentation</li>
-                    </>
+                    </div>
                   )}
                   {activeGrade === 'first' && (
-                    <>
+                    <div>
                       <li>Pursue truly exceptional and original research</li>
                       <li>Demonstrate outstanding critical thinking beyond normal expectations</li>
                       <li>Perfect every aspect of technical execution</li>
                       <li>Take well-judged creative risks that result in highly innovative outcomes</li>
-                    </>
+                    </div>
                   )}
                   {activeGrade === 'first-plus' && (
-                    <li>You're already at the highest grade band - maintaining this level of excellence requires consistent outstanding work across all aspects!</li>
+                    <div>
+                      <li>You're already at the highest grade band - maintaining this level of excellence requires consistent outstanding work across all aspects!</li>
+                    </div>
                   )}
                 </ul>
               </div>
