--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@
               color: 'bg-blue-800',
               textColor: 'text-white',
               qualities: [
-                { title: 'Research', description: 'Exceptional evidence of research skills' },
+                { title: 'Research', description: 'Exceptional evidence of research skills with a comprehensive range of evidence' },
                 { title: 'Design Development', description: 'Outstanding level of study that goes beyond the ideas and practices studied' },
                 { title: 'Technical Skills', description: 'Exceptional technical ability and execution' },
                 { title: 'Presentation', description: 'Professional, innovative presentation with perfect attention to detail' },
-                { title: 'Creativity', description: 'Highly innovative with new concepts and well-judged experimentation' },
-                { title: 'Critical Thinking', description: 'Outstanding academic level of critical evaluation' }
+                { title: 'Creativity', description: 'Highly innovative with new concepts and well-judged experimentation and risk-taking' },
+                { title: 'Critical Thinking', description: 'Outstanding academic level of critical evaluation and analysis' }
               ]
             },
             {
@@ -107,12 +107,12 @@
               color: 'bg-blue-600',
               textColor: 'text-white',
               qualities: [
-                { title: 'Research', description: 'Very good research skills with thorough investigation' },
-                { title: 'Design Development', description: 'Excellent level of study that goes beyond the ideas and practices studied' },
-                { title: 'Technical Skills', description: 'Excellent technical ability and execution' },
+                { title: 'Research', description: 'Excellent and detailed understanding with strong evidence and critical analysis' },
+                { title: 'Design Development', description: 'Excellent level of study with creative and critical response to content' },
+                { title: 'Technical Skills', description: 'Very good technical skills with appropriate methods to resolve problems' },
                 { title: 'Presentation', description: 'Professional presentation with strong attention to detail' },
-                { title: 'Creativity', description: 'Innovative with some new concepts and willingness to experiment' },
-                { title: 'Critical Thinking', description: 'Very good academic level of critical evaluation' }
+                { title: 'Creativity', description: 'Willingness to innovate, experiment with new concepts, and take well-judged risks' },
+                { title: 'Critical Thinking', description: 'Very good academic level of critical evaluation and analysis' }
               ]
             },
             {
@@ -122,12 +122,12 @@
               color: 'bg-blue-400',
               textColor: 'text-black',
               qualities: [
-                { title: 'Research', description: 'Good research skills with solid investigation' },
-                { title: 'Design Development', description: 'Good knowledge and ability to analyze ideas critically' },
-                { title: 'Technical Skills', description: 'Good technical ability and execution' },
-                { title: 'Presentation', description: 'Good professional presentation' },
-                { title: 'Creativity', description: 'Evidence of willingness to innovate and experiment with new ideas' },
-                { title: 'Critical Thinking', description: 'Good academic level of critical evaluation' }
+                { title: 'Research', description: 'Good knowledge and understanding with solid research skills' },
+                { title: 'Design Development', description: 'Good ability to analyze ideas and concepts critically' },
+                { title: 'Technical Skills', description: 'Good technical skills and ability to resolve practical issues' },
+                { title: 'Presentation', description: 'Professional approach to presentation of work' },
+                { title: 'Creativity', description: 'Willingness to innovate and experiment with new ideas and concepts' },
+                { title: 'Critical Thinking', description: 'Recognition of complexities with good academic/design practices' }
               ]
             },
             {
@@ -137,12 +137,12 @@
               color: 'bg-blue-200',
               textColor: 'text-black',
               qualities: [
-                { title: 'Research', description: 'Satisfactory research skills, may be limited in scope' },
-                { title: 'Design Development', description: 'Descriptive with limited analysis using principles and theories' },
-                { title: 'Technical Skills', description: 'Satisfactory technical ability' },
+                { title: 'Research', description: 'Some knowledge and understanding, may be limited in scope' },
+                { title: 'Design Development', description: 'Some critical analysis but may not always focus on key points' },
+                { title: 'Technical Skills', description: 'Satisfactory application of methods and skills to resolve problems' },
                 { title: 'Presentation', description: 'Satisfactory presentation that may lack refinement' },
-                { title: 'Creativity', description: 'Sticks mainly to familiar ideas with some willingness to experiment' },
-                { title: 'Critical Thinking', description: 'Satisfactory academic level of critical evaluation' }
+                { title: 'Creativity', description: 'Mostly sticks to familiar ideas with some willingness to experiment' },
+                { title: 'Critical Thinking', description: 'Recognition of some but not all complexities of the area of study' }
               ]
             },
             {
@@ -152,12 +152,42 @@
               color: 'bg-blue-100',
               textColor: 'text-black',
               qualities: [
-                { title: 'Research', description: 'Basic research with limited sources' },
-                { title: 'Design Development', description: 'Descriptive with little analysis, decisions not backed by evidence' },
-                { title: 'Technical Skills', description: 'Adequate technical ability for this level' },
+                { title: 'Research', description: 'Basic knowledge and understanding of required skills and practices' },
+                { title: 'Design Development', description: 'Descriptive rather than analytical, with oversimplified decision-making' },
+                { title: 'Technical Skills', description: 'Adequate application of methods to resolve straightforward problems' },
                 { title: 'Presentation', description: 'Adequate presentation but may lack professionalism' },
                 { title: 'Creativity', description: 'Sticks to familiar ideas with little exploration of new territory' },
-                { title: 'Critical Thinking', description: 'Adequate academic level of critical evaluation' }
+                { title: 'Critical Thinking', description: 'Beginning to develop professional approach but not consistent throughout' }
+              ]
+            },
+            {
+              id: 'marginal-fail',
+              title: 'Marginal Fail (FM)',
+              range: '35-39%',
+              color: 'bg-red-200',
+              textColor: 'text-black',
+              qualities: [
+                { title: 'Research', description: 'Limited knowledge and understanding of required skills and practices' },
+                { title: 'Design Development', description: 'Descriptive with little attempt to analyze or develop ideas' },
+                { title: 'Technical Skills', description: 'Not always accurate/appropriate to solve straightforward problems' },
+                { title: 'Presentation', description: 'Presentation skills not sufficient for this level of study' },
+                { title: 'Creativity', description: 'Sticks only to familiar ideas with no exploration of new territory' },
+                { title: 'Critical Thinking', description: 'Little evidence of professional approach or good academic practices' }
+              ]
+            },
+            {
+              id: 'fail',
+              title: 'Fail (F)',
+              range: '0-34%',
+              color: 'bg-red-400',
+              textColor: 'text-white',
+              qualities: [
+                { title: 'Research', description: 'Little knowledge or understanding of required skills and practices' },
+                { title: 'Design Development', description: 'No attempt to analyze ideas/themes or arguments' },
+                { title: 'Technical Skills', description: 'Poor technical skills with inadequate application of methods' },
+                { title: 'Presentation', description: 'Poor presentation skills that do not meet requirements' },
+                { title: 'Creativity', description: 'No engagement with new ideas or creative development' },
+                { title: 'Critical Thinking', description: 'Does not meet most learning outcomes and lacks academic practice' }
               ]
             }
           ];
@@ -195,7 +225,9 @@
                   activeGrade === 'first-plus' ? 'Outstanding' :
                   activeGrade === 'first' ? 'Very Good' :
                   activeGrade === 'upper-second' ? 'Good' :
-                  activeGrade === 'lower-second' ? 'Satisfactory' : 'Adequate'
+                  activeGrade === 'lower-second' ? 'Satisfactory' :
+                  activeGrade === 'third' ? 'Adequate' :
+                  activeGrade === 'marginal-fail' ? 'Unsatisfactory' : 'Poor'
                 }</p>
               </div>
               
@@ -211,11 +243,30 @@
               <div className="mt-6 p-4 bg-gray-50 rounded-lg">
                 <h3 className="font-bold mb-2">How to move up to the next grade band:</h3>
                 <ul className="list-disc pl-5 space-y-2">
+                  {activeGrade === 'fail' && (
+                    <div>
+                      <li>Develop basic knowledge of skills and practices covered in the module</li>
+                      <li>Make some attempt to analyze materials rather than just describe</li>
+                      <li>Apply appropriate methods to solve basic problems</li>
+                      <li>Show more attention to presentation basics</li>
+                      <li>Begin to engage with at least some new ideas</li>
+                    </div>
+                  )}
+                  {activeGrade === 'marginal-fail' && (
+                    <div>
+                      <li>Demonstrate more consistent knowledge of required skills</li>
+                      <li>Begin to analyze your work rather than just describing it</li>
+                      <li>Make decisions with some evidence to support them</li>
+                      <li>Improve basic technical and presentation skills</li>
+                      <li>Show at least some willingness to explore beyond familiar ideas</li>
+                    </div>
+                  )}
                   {activeGrade === 'third' && (
                     <div>
                       <li>Expand your research beyond the obvious sources</li>
-                      <li>Begin to analyze your work rather than just describing it</li>
+                      <li>Focus more on analysis rather than description</li>
                       <li>Show more attention to presentation details</li>
+                      <li>Demonstrate more consistent professionalism in your approach</li>
                       <li>Try to experiment with new ideas rather than staying in comfort zone</li>
                     </div>
                   )}
@@ -225,6 +276,7 @@
                       <li>Develop stronger analytical skills in your design development</li>
                       <li>Improve the professionalism of your presentation</li>
                       <li>Take more creative risks and explore new territory</li>
+                      <li>Recognize more of the complexities in your area of study</li>
                     </div>
                   )}
                   {activeGrade === 'upper-second' && (
@@ -233,6 +285,7 @@
                       <li>Demonstrate more sophisticated analysis and critical thinking</li>
                       <li>Refine technical and presentation skills to a higher level</li>
                       <li>Show more innovation and well-considered experimentation</li>
+                      <li>Take more creative risks in your approach to design</li>
                     </div>
                   )}
                   {activeGrade === 'first' && (
@@ -241,6 +294,7 @@
                       <li>Demonstrate outstanding critical thinking beyond normal expectations</li>
                       <li>Perfect every aspect of technical execution</li>
                       <li>Take well-judged creative risks that result in highly innovative outcomes</li>
+                      <li>Show evidence of innovation throughout all aspects of your work</li>
                     </div>
                   )}
                   {activeGrade === 'first-plus' && (
